More work on user create w/ location data from Nominatim
